gccida/c0/dbxout_block
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_block/src/dbxout.c:3277:6: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
if ( debug_info_level_0 != DINFO_LEVEL_TERSE || !deptha ) 
     ^~~~~~~~~~~~~~~~~~
     debug_info_level
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_block/src/flags.h:53:30: note: 'debug_info_level' declared here
extern enum debug_info_level debug_info_level;
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_block/src/obj/dbxout.o] Error 1
